--- a/package.json
+++ b/package.json
@@ -16,12 +16,6 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.1",
-    "husky": "^7.0.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "$TALISMAN_HOME/talisman_hook_script pre-commit && echo 'Test'"
-    }
+    "eslint-config-next": "12.0.1"
   }
 }
