--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.1"
+    "eslint-config-next": "12.0.1",
+    "husky": "^7.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "$TALISMAN_HOME/talisman_hook_script pre-commit"
+    }
   }
 }
