--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --ignore-path .gitignore",
+    "format": "prettier --write \"**/*.+(js|ts|tsx|json)\" --ignore-path .git/ignore"
   },
   "dependencies": {
     "next": "12.0.1",
@@ -17,7 +18,8 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "prettier": "^2.4.1"
   },
   "husky": {
     "hooks": {
