--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --ignore-path .gitignore",
+    "lint": "next lint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "format": "prettier --write \"**/*.+(js|ts|tsx|json)\" --ignore-path .git/ignore"
   },
   "dependencies": {
@@ -16,10 +16,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   },
   "husky": {
     "hooks": {
